lib/tests/fixtures/compiler/evaluation/new_tuple_invalid_wrap.baseline
Error: new_tuple_invalid_wrap.pp:1:22: node 'test': expected Boolean for wrap argument but was given String[5, 5].
  notice Tuple.new(10, wrong)
                       ^~~~~
  backtrace:
    in 'new' (no source)
    in '<class main>' at new_tuple_invalid_wrap.pp:1
