lib/tests/fixtures/compiler/evaluation/new_tuple_invalid_wrap.pp
notice Tuple.new(10, wrong)
